# POMP

./: README.md  settings.gradle
app/: build.gradle
app/phoni/: build.gradle
app/phoni/libs/: CMakeLists.txt
app/phoni/libs/dependencies/: CMakeLists.txt
app/phoni/libs/dependencies/ShapedSlp/: CMakeLists.txt  Common.hpp  Decompress.cpp  NaiveSlp.hpp  SlpEncBuild.cpp
app/phoni/libs/dependencies/lib/pkgconfig/: sdsl-lite.pc
app/phoni/libs/dependencies/r-index-master/: CMakeLists.txt
app/phoni/libs/dependencies/sdsl/lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
app/phoni/libs/include/: CMakeLists.txt
app/phoni/libs/include/common/: CMakeLists.txt
app/phoni/libs/include/ms/: CMakeLists.txt
app/phoni/libs/src/: CMakeLists.txt  matching_statistics.cpp
app/phoni/src/androidTest/java/com/example/phoni/: ExampleInstrumentedTest.java
app/phoni/src/main/: AndroidManifest.xml
app/phoni/src/test/java/com/example/phoni/: ExampleUnitTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/test123/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
